<?xml version="1.0"?>
<package format="2">
  <name>custom_costmap_layer</name>
  <version>0.0.0</version>
  <description>The custom_costmap_layer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pao@todo.todo">pao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

<export>
  <costmap_2d plugins="${prefix}/custom_costmap_layer_plugin.xml"/>
</export>
</package>
